[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "navicat-marc"
version = "0.1.0"
authors = [
  { name="R. Laplaza", email="rlaplaza@duck.com" },
]
description = "Modular Analysis of Representative Conformers"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
